# yeban-workflow-manager

./: .comfyignore  .gitignore  .tracking  README.md  __init__.py  config.json  file_handler.py  nodes.py  pyproject.toml  requirements.txt  server.py  web_api_handler.py  workflow_manager.py
tools/: rebuild_yeban_metadata.py
web/: api.js  i18n.js  utils.js  workflow_manager_extension.js
web/components/: ContextMenu.js  Dialog.js  Drawer.js  GroupTree.js  VersionHistory.js  WorkflowItem.js  WorkflowList.js
