[project]
name = "yeban-workflow-manager"
description = "A ComfyUI workflow manager plugin with auto-save, version history, sidebar integration and more."
version = "0.2.2"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/wsq194/yeban-workflow-manager"

[tool.comfy]
PublisherId = "wsq194"                    
DisplayName = "Yeban Workflow Manager"
Icon = ""                                 
includes = []