[project]
name = "yeban-workflow-manager"
description = "A ComfyUI workflow manager plugin with auto-save, version history, resilient metadata recovery, and synchronized workflow backups."
version = "0.2.6"
license = { text = "MIT" }
dependencies = []

[project.urls]
Repository = "https://github.com/wsq194/yeban-workflow-manager"

[tool.comfy]
PublisherId = "wsq194"
DisplayName = "Yeban Workflow Manager"
Icon = ""
includes = []
